# telegram-files-action

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: build_and_push.yml
src/: action.rs  bot.rs  main.rs
